Refactor, remove spring framework